--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ test {
             'junit.jupiter.execution.parallel.mode.classes.default': 'concurrent',
             'junit.jupiter.execution.parallel.mode.default'        : 'concurrent'
     ]
+    jvmArgs "--add-opens=java.base/java.net=ALL-UNNAMED"
 }
 
 check {
